# reap3r

./: .env.example  .gitignore  DEPLOY.md  README.md  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/agent/: Cargo.toml  Dockerfile
apps/agent/src/: config.rs  main.rs
apps/agent/src/comms/: client.rs  protocol.rs
apps/agent/src/modules/: inventory.rs  metrics.rs  mod.rs  runner.rs
apps/backend/: Dockerfile  Dockerfile.simple  package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/auth/: auth.service.ts  hmac.service.ts
apps/backend/src/config/: index.ts
apps/backend/src/db/: connection.ts  migrate.ts  redis.ts
apps/backend/src/jobs/: scheduler.ts
apps/backend/src/services/: agent.service.ts  audit.service.ts  dashboard.service.ts  job.service.ts  metrics.service.ts
apps/backend/src/websocket/: handler.ts
apps/frontend/: Dockerfile  Dockerfile.simple  Dockerfile.standalone  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/frontend/src/app/: layout.tsx  providers.tsx  root-toaster.tsx
apps/frontend/src/components/: RemoteShellPanel.tsx  RunScriptDialog.tsx
apps/frontend/src/hooks/: useApi.ts  useWebSocket.ts
apps/frontend/src/lib/: api.ts  store.ts  utils.ts  websocket.ts
apps/frontend/src/styles/: globals.css
docs/: add-job-guide.md  openapi.yaml  protocol-v2.md
infra/grafana/dashboards/: overview.json
infra/prometheus/: prometheus.yml
infra/scripts/: setup-dev.sh
(+17 files in other folders)
