[package]
name = "massvision-agent"
version = "1.0.0"
edition = "2021"
authors = ["MASSVISION Team"]
description = "MASSVISION Reap3r - Lightweight Agent for Remote Operations"
license = "Proprietary"
default-run = "massvision-agent"

[[bin]]
name = "massvision-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HMAC-SHA256 signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID for nonce generation
uuid = { version = "1.9", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# System information
sysinfo = "0.30"

# Configuration
toml = "0.8"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Hostname
hostname = "0.4"

# OS-specific
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
